src/main/generated/antlr/org/taylorlang/grammar/TaylorLangParser.java
// Generated from org/taylorlang/grammar/TaylorLang.g4 by ANTLR 4.13.1

package org.taylorlang.grammar;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class TaylorLangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
<<<<<<< HEAD
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, BooleanLiteral=48, IntLiteral=49, FloatLiteral=50, 
		StringLiteral=51, IDENTIFIER=52, LineComment=53, BlockComment=54, WS=55;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_functionDecl = 2, RULE_functionBody = 3, 
		RULE_paramList = 4, RULE_param = 5, RULE_typeDecl = 6, RULE_unionType = 7, 
		RULE_productType = 8, RULE_positionedProductType = 9, RULE_namedProductType = 10, 
		RULE_namedFieldList = 11, RULE_namedField = 12, RULE_positionedFieldList = 13, 
		RULE_valDecl = 14, RULE_typeParams = 15, RULE_typeParam = 16, RULE_type = 17, 
		RULE_typeArgs = 18, RULE_primitiveType = 19, RULE_expression = 20, RULE_primary = 21, 
		RULE_blockExpr = 22, RULE_blockContent = 23, RULE_literal = 24, RULE_tupleLiteral = 25, 
		RULE_constructorCall = 26, RULE_argList = 27, RULE_ifExpr = 28, RULE_forExpr = 29, 
		RULE_matchExpr = 30, RULE_matchCase = 31, RULE_pattern = 32, RULE_constructorPattern = 33, 
		RULE_lambdaExpr = 34;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "functionDecl", "functionBody", "paramList", 
			"param", "typeDecl", "unionType", "productType", "positionedProductType", 
			"namedProductType", "namedFieldList", "namedField", "positionedFieldList", 
			"valDecl", "typeParams", "typeParam", "type", "typeArgs", "primitiveType", 
			"expression", "primary", "blockExpr", "blockContent", "literal", "tupleLiteral", 
			"constructorCall", "argList", "ifExpr", "forExpr", "matchExpr", "matchCase", 
=======
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, IDENTIFIER=44, IntLiteral=45, 
		FloatLiteral=46, StringLiteral=47, BooleanLiteral=48, LineComment=49, 
		BlockComment=50, WS=51;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_functionDecl = 2, RULE_functionBody = 3, 
		RULE_paramList = 4, RULE_param = 5, RULE_typeDecl = 6, RULE_unionType = 7, 
		RULE_productType = 8, RULE_fieldList = 9, RULE_field = 10, RULE_valDecl = 11, 
		RULE_typeParams = 12, RULE_typeParam = 13, RULE_type = 14, RULE_typeArgs = 15, 
		RULE_primitiveType = 16, RULE_expression = 17, RULE_primary = 18, RULE_literal = 19, 
		RULE_listLiteral = 20, RULE_mapLiteral = 21, RULE_mapEntry = 22, RULE_tupleLiteral = 23, 
		RULE_constructorCall = 24, RULE_argList = 25, RULE_matchExpr = 26, RULE_matchCase = 27, 
		RULE_pattern = 28, RULE_constructorPattern = 29, RULE_lambdaExpr = 30;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "functionDecl", "functionBody", "paramList", 
			"param", "typeDecl", "unionType", "productType", "fieldList", "field", 
			"valDecl", "typeParams", "typeParam", "type", "typeArgs", "primitiveType", 
			"expression", "primary", "literal", "listLiteral", "mapLiteral", "mapEntry", 
			"tupleLiteral", "constructorCall", "argList", "matchExpr", "matchCase", 
>>>>>>> 703e8f0 (Implement TaylorLang compiler foundation with Kotlin)
			"pattern", "constructorPattern", "lambdaExpr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'fn'", "'('", "')'", "':'", "'=>'", "'{'", "'}'", "','", "'type'", 
			"'='", "'|'", "'val'", "'<'", "'>'", "'?'", "'Int'", "'Long'", "'Float'", 
			"'Double'", "'Boolean'", "'String'", "'Unit'", "'.'", "'['", "']'", "'-'", 
			"'!'", "'*'", "'/'", "'%'", "'+'", "'<='", "'>='", "'=='", "'!='", "'&&'", 
<<<<<<< HEAD
			"'||'", "'?:'", "';'", "'null'", "'if'", "'else'", "'for'", "'in'", "'match'", 
			"'case'", "'_'"
=======
			"'||'", "'?:'", "'null'", "'match'", "'case'", "'_'", "'if'"
>>>>>>> 703e8f0 (Implement TaylorLang compiler foundation with Kotlin)
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
<<<<<<< HEAD
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"BooleanLiteral", "IntLiteral", "FloatLiteral", "StringLiteral", "IDENTIFIER", 
			"LineComment", "BlockComment", "WS"
=======
			null, null, null, null, null, null, null, null, "IDENTIFIER", "IntLiteral", 
			"FloatLiteral", "StringLiteral", "BooleanLiteral", "LineComment", "BlockComment", 
			"WS"
>>>>>>> 703e8f0 (Implement TaylorLang compiler foundation with Kotlin)
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TaylorLang.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TaylorLangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(TaylorLangParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TaylorLangListener ) ((TaylorLangListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TaylorLangListener ) ((TaylorLangListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TaylorLangVisitor ) return ((TaylorLangVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
<<<<<<< HEAD
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 8773003479355974L) != 0)) {
				{
				{
				setState(70);
				statement();
				}
				}
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(76);
=======
			setState(65);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 547007252927046L) != 0)) {
				{
				{
				setState(62);
				statement();
				}
				}
				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(68);
>>>>>>> 703e8f0 (Implement TaylorLang compiler foundation with Kotlin)
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public FunctionDeclContext functionDecl() {
			return getRuleContext(FunctionDeclContext.class,0);
		}
		public TypeDeclContext typeDecl() {
			return getRuleContext(TypeDeclContext.class,0);
		}
		public ValDeclContext valDecl() {
			return getRuleContext(ValDeclContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TaylorLangListener ) ((TaylorLangListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TaylorLangListener ) ((TaylorLangListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TaylorLangVisitor ) return ((TaylorLangVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
<<<<<<< HEAD
			setState(82);
=======
			setState(74);
>>>>>>> 703e8f0 (Implement TaylorLang compiler foundation with Kotlin)
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
<<<<<<< HEAD
				setState(78);
=======
				setState(70);
>>>>>>> 703e8f0 (Implement TaylorLang compiler foundation with Kotlin)
				functionDecl();
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 2);
				{
<<<<<<< HEAD
				setState(79);
=======
				setState(71);
>>>>>>> 703e8f0 (Implement TaylorLang compiler foundation with Kotlin)
				typeDecl();
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 3);
				{
<<<<<<< HEAD
				setState(80);
=======
				setState(72);
>>>>>>> 703e8f0 (Implement TaylorLang compiler foundation with Kotlin)
				valDecl();
				}
				break;
			case T__1:
			case T__5:
<<<<<<< HEAD
			case T__25:
			case T__26:
			case T__39:
			case T__40:
			case T__42:
			case T__44:
			case BooleanLiteral:
			case IntLiteral:
			case FloatLiteral:
			case StringLiteral:
			case IDENTIFIER:
				enterOuterAlt(_localctx, 4);
				{
				setState(81);
=======
			case T__23:
			case T__25:
			case T__26:
			case T__38:
			case T__39:
			case IDENTIFIER:
			case IntLiteral:
			case FloatLiteral:
			case StringLiteral:
			case BooleanLiteral:
				enterOuterAlt(_localctx, 4);
				{
				setState(73);
>>>>>>> 703e8f0 (Implement TaylorLang compiler foundation with Kotlin)
				expression(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionDeclContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(TaylorLangParser.IDENTIFIER, 0); }
		public FunctionBodyContext functionBody() {
			return getRuleContext(FunctionBodyContext.class,0);
		}
		public TypeParamsContext typeParams() {
			return getRuleContext(TypeParamsContext.class,0);
		}
		public ParamListContext paramList() {
			return getRuleContext(ParamListContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public FunctionDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TaylorLangListener ) ((TaylorLangListener)listener).enterFunctionDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TaylorLangListener ) ((TaylorLangListener)listener).exitFunctionDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TaylorLangVisitor ) return ((TaylorLangVisitor<? extends T>)visitor).visitFunctionDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionDeclContext functionDecl() throws RecognitionException {
		FunctionDeclContext _localctx = new FunctionDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_functionDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
<<<<<<< HEAD
			setState(84);
			match(T__0);
			setState(85);
			match(IDENTIFIER);
			setState(87);
=======
			setState(76);
			match(T__0);
			setState(77);
			match(IDENTIFIER);
			setState(79);
>>>>>>> 703e8f0 (Implement TaylorLang compiler foundation with Kotlin)
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__12) {
				{
<<<<<<< HEAD
				setState(86);
=======
				setState(78);
>>>>>>> 703e8f0 (Implement TaylorLang compiler foundation with Kotlin)
				typeParams();
				}
			}

<<<<<<< HEAD
			setState(89);
			match(T__1);
			setState(91);
=======
			setState(81);
			match(T__1);
			setState(83);
>>>>>>> 703e8f0 (Implement TaylorLang compiler foundation with Kotlin)
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENTIFIER) {
				{
<<<<<<< HEAD
				setState(90);
=======
				setState(82);
>>>>>>> 703e8f0 (Implement TaylorLang compiler foundation with Kotlin)
				paramList();
				}
			}

<<<<<<< HEAD
			setState(93);
			match(T__2);
			setState(96);
=======
			setState(85);
			match(T__2);
			setState(88);
>>>>>>> 703e8f0 (Implement TaylorLang compiler foundation with Kotlin)
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
<<<<<<< HEAD
				setState(94);
				match(T__3);
				setState(95);
=======
				setState(86);
				match(T__3);
				setState(87);
>>>>>>> 703e8f0 (Implement TaylorLang compiler foundation with Kotlin)
				type(0);
				}
			}

<<<<<<< HEAD
			setState(98);
			match(T__4);
			setState(99);
=======
			setState(90);
			match(T__4);
			setState(91);
>>>>>>> 703e8f0 (Implement TaylorLang compiler foundation with Kotlin)
			functionBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionBodyContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public FunctionBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TaylorLangListener ) ((TaylorLangListener)listener).enterFunctionBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TaylorLangListener ) ((TaylorLangListener)listener).exitFunctionBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TaylorLangVisitor ) return ((TaylorLangVisitor<? extends T>)visitor).visitFunctionBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionBodyContext functionBody() throws RecognitionException {
		FunctionBodyContext _localctx = new FunctionBodyContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_functionBody);
		int _la;
		try {
<<<<<<< HEAD
			setState(110);
=======
			setState(102);
>>>>>>> 703e8f0 (Implement TaylorLang compiler foundation with Kotlin)
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
<<<<<<< HEAD
				setState(101);
=======
				setState(93);
>>>>>>> 703e8f0 (Implement TaylorLang compiler foundation with Kotlin)
				expression(0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
<<<<<<< HEAD
				setState(102);
				match(T__5);
				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 8773003479355974L) != 0)) {
					{
					{
					setState(103);
					statement();
					}
					}
					setState(108);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(109);
=======
				setState(94);
				match(T__5);
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 547007252927046L) != 0)) {
					{
					{
					setState(95);
					statement();
					}
					}
					setState(100);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(101);
>>>>>>> 703e8f0 (Implement TaylorLang compiler foundation with Kotlin)
				match(T__6);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamListContext extends ParserRuleContext {
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public ParamListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TaylorLangListener ) ((TaylorLangListener)listener).enterParamList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TaylorLangListener ) ((TaylorLangListener)listener).exitParamList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TaylorLangVisitor ) return ((TaylorLangVisitor<? extends T>)visitor).visitParamList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamListContext paramList() throws RecognitionException {
		ParamListContext _localctx = new ParamListContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_paramList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
<<<<<<< HEAD
			setState(112);
			param();
			setState(117);
=======
			setState(104);
			param();
			setState(109);
>>>>>>> 703e8f0 (Implement TaylorLang compiler foundation with Kotlin)
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__7) {
				{
				{
<<<<<<< HEAD
				setState(113);
				match(T__7);
				setState(114);
				param();
				}
				}
				setState(119);
=======
				setState(105);
				match(T__7);
				setState(106);
				param();
				}
				}
				setState(111);
>>>>>>> 703e8f0 (Implement TaylorLang compiler foundation with Kotlin)
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(TaylorLangParser.IDENTIFIER, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TaylorLangListener ) ((TaylorLangListener)listener).enterParam(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TaylorLangListener ) ((TaylorLangListener)listener).exitParam(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TaylorLangVisitor ) return ((TaylorLangVisitor<? extends T>)visitor).visitParam(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamContext param() throws RecognitionException {
		ParamContext _localctx = new ParamContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_param);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
<<<<<<< HEAD
			setState(120);
			match(IDENTIFIER);
			setState(123);
=======
			setState(112);
			match(IDENTIFIER);
			setState(115);
>>>>>>> 703e8f0 (Implement TaylorLang compiler foundation with Kotlin)
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
<<<<<<< HEAD
				setState(121);
				match(T__3);
				setState(122);
=======
				setState(113);
				match(T__3);
				setState(114);
>>>>>>> 703e8f0 (Implement TaylorLang compiler foundation with Kotlin)
				type(0);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeDeclContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(TaylorLangParser.IDENTIFIER, 0); }
		public UnionTypeContext unionType() {
			return getRuleContext(UnionTypeContext.class,0);
		}
		public TypeParamsContext typeParams() {
			return getRuleContext(TypeParamsContext.class,0);
		}
		public TypeDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TaylorLangListener ) ((TaylorLangListener)listener).enterTypeDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TaylorLangListener ) ((TaylorLangListener)listener).exitTypeDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TaylorLangVisitor ) return ((TaylorLangVisitor<? extends T>)visitor).visitTypeDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeDeclContext typeDecl() throws RecognitionException {
		TypeDeclContext _localctx = new TypeDeclContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_typeDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
<<<<<<< HEAD
			setState(125);
			match(T__8);
			setState(126);
			match(IDENTIFIER);
			setState(128);
=======
			setState(117);
			match(T__8);
			setState(118);
			match(IDENTIFIER);
			setState(120);
>>>>>>> 703e8f0 (Implement TaylorLang compiler foundation with Kotlin)
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__12) {
				{
<<<<<<< HEAD
				setState(127);
=======
				setState(119);
>>>>>>> 703e8f0 (Implement TaylorLang compiler foundation with Kotlin)
				typeParams();
				}
			}

<<<<<<< HEAD
			setState(130);
			match(T__9);
			setState(131);
=======
			setState(122);
			match(T__9);
			setState(123);
>>>>>>> 703e8f0 (Implement TaylorLang compiler foundation with Kotlin)
			unionType();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UnionTypeContext extends ParserRuleContext {
		public List<ProductTypeContext> productType() {
			return getRuleContexts(ProductTypeContext.class);
		}
		public ProductTypeContext productType(int i) {
			return getRuleContext(ProductTypeContext.class,i);
		}
		public UnionTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unionType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TaylorLangListener ) ((TaylorLangListener)listener).enterUnionType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TaylorLangListener ) ((TaylorLangListener)listener).exitUnionType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TaylorLangVisitor ) return ((TaylorLangVisitor<? extends T>)visitor).visitUnionType(this);
			else return visitor.visitChildren(this);
		}
	}
